<package format="2">
  <name>raceworld_master</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for raceworld_master</p>
    <p>This package contains configuration data, 3D models and launch files
for raceworld_master robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <depend>visualization_msgs</depend>
  <depend>cv_bridge_4</depend>
  <depend>image_transport</depend>

  <export>
    <architecture_independent />
  </export>
</package>
